--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2018"
 [dependencies]
 text_io = "0.1.8"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 serde_derive = "1.0.105"
 ansi_term = "0.12.1"
+rusqlite = { version = "0.21.0", features = ["bundled"] }
